2002-08-05  Rachel Hestilow  <hestilow@ximian.com>

	* parser/Gnome.metadata: Patch from duncan for
	bug #28553 (canvas item event handler rename).

2002-08-04  Joe Shaw  <joe@assbarn.com>

	* configure.in: We actually need libgnomeui, not libgnome.

2002-08-04  Mike Kestner <mkestner@speakeasy.net>

	Tagged for 0.3 and updated configure.in to 0.4.
	Back open for commits.

2002-08-03  Mike Kestner <mkestner@speakeasy.net>

	Freezing cvs for 0.3 release. Please no commits until the release.

2002-08-03  Mike Kestner <mkestner@speakeasy.net>

	* generator/Method.cs : Added IsGetter, IsSetter, ReturnType. Made
	  GenerateImport, GenerateBody public.
	* generator/Parameters.cs : Added Parameter::MarshalType
	* generator/Property.cs : Added logic to use methods instead of text
	  properties wherever possible.
	
2002-08-03  Rachel Hestilow  <hestilow@ximian.com>

	* generator/Method.cs: Support libname overrides. Call parms.Finish.
	* generator/Parameters.cs: New method parms.Finish. Generate a temporary
	holder variable for enum out parameters.
	* generator/Property.cs: Pass a boolean to EnumWrapper indicating.
	if these are flags.
	* generator/StructBase.cs: Disable array marshalling (it is
	broken in mono.)
	* generator/SymbolTable.cs: Add methods IsEnumFlags.

	* glib/EnumWrapper.cs: New bool "flags".
	* glib/Value.cs: Call flags variant on GValue for enum props, if needed.

	* glue/Makefile.am, glue/style.c, glue/widget.c: Add widget
	and style field accessor methods.
	
	* gtk/Style.custom, Widget.custom: Added.
	
	* parser/README: Update requirements (needed for pixbuf drawable hack)
	* parser/Gdk.metadata: Fix library for pixbuf methods in gdk.
	Add Window.GetPointer "out" parameters.
	* parser/gapi2xml.pl: Remap gdk_draw_* methods to Drawable.

	* sample/Makefile.in: Add size and scribble samples.
	* sample/Scribble.cs: Added.
	
2002-08-02  Rachel Hestilow  <hestilow@ximian.com>

	[ Mike, this is everything I wanted in for the release. ]
