@@ -1,0 +1,14 @@
+//
+// Gnome.CanvasGroup.custom - Gnome CanvasGroup class customizations
+//
+// Author: Rachel Hestilow <hestilow@ximian.com>
+//
+// Copyright (C) 2002 Rachel Hestilow
+//
+// This code is inserted after the automatically generated code.
+//
+	
+protected CanvasGroup (Gnome.CanvasGroup group, int type) : base (group, type)
+{
+}
+
