@@ -1,0 +1,14 @@
+//
+// Gnome.CanvasRE.custom - Gnome CanvasRE class customizations
+//
+// Author: Rachel Hestilow <hestilow@ximian.com>
+//
+// Copyright (C) 2002 Rachel Hestilow
+//
+// This code is inserted after the automatically generated code.
+//
+	
+protected CanvasRE (Gnome.CanvasGroup group, int type) : base (group, type)
+{
+}
+
