@@ -1,0 +1,14 @@
+//
+// Gnome.CanvasRichText.custom - Gnome CanvasRichText class customizations
+//
+// Author: Rachel Hestilow <hestilow@ximian.com>
+//
+// Copyright (C) 2002 Rachel Hestilow
+//
+// This code is inserted after the automatically generated code.
+//
+	
+public CanvasRichText (Gnome.CanvasGroup group) : base (group, Type)
+{
+}
+
