@@ -1,5 +1,12 @@
 2002-08-05  Rachel Hestilow  <hestilow@ximian.com>
 
+	* gnome/Canvas*.custom, IconTextItem.custom: Added.
+
+	* sample/CanvasExample.cs: Added.
+	* sample/Makefile.in: Build canvas example in gnome build.
+	
+2002-08-05  Rachel Hestilow  <hestilow@ximian.com>
+
 	* parser/Gnome.metadata: Patch from duncan for
 	bug #28553 (canvas item event handler rename).
 
